# LimeEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeTools.cmake  CompileShaders.cmake  GameEngine.sln  LICENSE  LimeEngine.sln  cpp.hint
Devops/: FormatAllFiles.bat
LimeEngine/: CMakeLists.txt  LimeEngine.vcxproj  LimeEngine.vcxproj.filters  PixelShader.hlsl  VertexShader.hlsl
LimeEngine/Dependencies/stb_image/: stb_image.cpp
LimeEngine/Engine/: CoreBase.hpp  Engine.cpp  Engine.hpp
LimeEngine/Engine/Base/: Color.hpp  Events.hpp  GameData.hpp  GameDataLoader.cpp  GameDataLoader.hpp  GameDataManager.cpp  GameDataManager.hpp  GameResource.cpp  GameResource.hpp  Material.cpp  Material.hpp  Math.hpp  Mesh.cpp  Mesh.hpp  Primitives.cpp  Primitives.hpp  Rotator.cpp  Rotator.hpp  Texture2D.cpp  Texture2D.hpp  Transform.cpp  Transform.hpp  Transformable.cpp  Transformable.hpp  Vector.cpp  Vector.hpp  Vertex.hpp
LimeEngine/Engine/Diagnostics/: Logger.cpp  Logger.hpp
LimeEngine/Engine/Exceptions/: DxgiInfo.cpp  DxgiInfo.hpp  EngineExceptions.cpp  EngineExceptions.hpp  GraphicsExceptions.cpp  GraphicsExceptions.hpp  WindowExceptions.cpp  WindowExceptions.hpp
LimeEngine/Engine/Graphics/: Drawer.cpp  Drawer.hpp  GraphicAdapter.cpp  GraphicAdapter.hpp  Graphics.cpp  Graphics.hpp  Renderer.cpp  Renderer.hpp  Shaders.cpp  Shaders.hpp
LimeEngine/Engine/Graphics/Base/: GraphicFactory.hpp  IDrawable.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshRenderData.cpp  MeshRenderData.hpp  MeshRenderDataDX11.cpp  MeshRenderDataDX11.hpp  RenderData.hpp  RenderQueue.cpp  RenderQueue.hpp  Texture2D.cpp  Texture2D.hpp
LimeEngine/Engine/Graphics/Buffers/: ConstantBuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
LimeEngine/Engine/Helpers/: Paths.cpp  Paths.hpp  StringHelper.cpp  StringHelper.hpp  Timer.cpp  Timer.hpp
LimeEngine/Engine/IO/: EngineIO.cpp  EngineIO.hpp  RenderIO.cpp  RenderIO.hpp  SceneIO.cpp  SceneIO.hpp
LimeEngine/Engine/Input/: InputDevice.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
LimeEngine/Engine/Logger/: Logger.cpp  Logger.hpp
LimeEngine/Engine/Scene/: CameraComponent.cpp  CameraComponent.hpp  CameraObject.cpp  CameraObject.hpp  DefaultPlayerCameraComponent.cpp  DefaultPlayerCameraComponent.hpp  MeshComponent.cpp  MeshComponent.hpp  MeshObject.cpp  MeshObject.hpp  Scene.cpp  Scene.hpp  SceneComponent.cpp  SceneComponent.hpp  SceneMap.cpp  SceneMap.hpp  SceneObject.cpp  SceneObject.hpp  TestMap.cpp  TestMap.hpp
LimeEngine/Engine/Window/: WinApi.hpp  WinMain.cpp  Window.cpp  Window.hpp  resource.h
LimeEngine/Includes/dxerr/: dxerr.h
LimeEngine/Resource/: LimeEngine.rc  resource.h
LimeEngine/Shaders/: PixelShader.hlsl  SimpleShader_vs.hlsl  VertexShader.hlsl
LimeEngine/Source/: Application.cpp  Application.hpp  CoreBase.hpp  Engine.cpp  Engine.hpp  EngineStaticFields.cpp  EntryPoint.hpp  LimeEngine.hpp  StaticConfig.hpp  lepch.hpp
LimeEngine/Source/Base/: Assert.hpp  AssertTypes.cpp  AssertTypes.hpp  BaseTypes.hpp  Color.hpp  Debugger.cpp  Debugger.hpp  EngineTypes.hpp  Event.hpp  Events.hpp  GameDataLoader.cpp  GameDataLoader.hpp  GameDataManager.cpp  GameDataManager.hpp  GameResource.cpp  GameResource.hpp  Math.cpp  Math.hpp  Matrix.hpp  MeshTools.cpp  MeshTools.hpp  PlatformDetection.hpp  Primitives.cpp  Primitives.hpp  Reflection.hpp  Rotator.cpp  Rotator.hpp  StaticInitializer.cpp  StaticInitializer.hpp  String.hpp  Transform.cpp  Transform.hpp  Transformable.cpp  Transformable.hpp  Vector.cpp  Vector.hpp  Vertex.hpp
LimeEngine/Source/Diagnostics/: Logger.cpp  Logger.hpp  LoggerSink.cpp  LoggerSink.hpp  OutputLogPanel.cpp  OutputLogPanel.hpp  RuntimeEditor.cpp  RuntimeEditor.hpp
LimeEngine/Source/Exceptions/: DxgiInfo.cpp  DxgiInfo.hpp  EngineExceptions.cpp  EngineExceptions.hpp  GraphicsExceptions.hpp  WindowExceptions.hpp
LimeEngine/Source/Graphics/: Buffers.cpp  Buffers.hpp  GraphicExceptions.hpp  GraphicFactory.hpp  IBindable.hpp  IDrawable.hpp  Material.cpp  Material.hpp  MaterialParameters.cpp  MaterialParameters.hpp  Mesh.cpp  Mesh.hpp  RenderAPI.cpp  RenderAPI.hpp  RenderData.cpp  RenderData.hpp  RenderOutput.cpp  RenderOutput.hpp  RenderPreset.hpp  RenderQueue.cpp  RenderQueue.hpp  RenderTarget.hpp  RenderViewport.cpp  RenderViewport.hpp  Renderer.cpp  Renderer.hpp  Shaders.cpp  Shaders.hpp  Texture2D.cpp  Texture2D.hpp  VertexArray.cpp  VertexArray.hpp
LimeEngine/Source/Helpers/: MacroUnility.hpp  Paths.cpp  Paths.hpp  StringHelper.cpp  StringHelper.hpp  Timer.cpp  Timer.hpp
LimeEngine/Source/IO/: EngineIO.cpp  EngineIO.hpp  RenderIO.cpp  RenderIO.hpp  SceneIO.cpp
LimeEngine/Source/Input/: Input.cpp  Input.hpp  InputDevice.cpp  InputDevice.hpp  InputKeys.cpp  InputKeys.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
LimeEngine/Source/Layer/: DataLayer.cpp  DataLayer.hpp  EditorLayer.cpp  EditorLayer.hpp  EngineLayer.cpp  EngineLayer.hpp  EngineLayerManager.cpp  EngineLayerManager.hpp  InputLayer.cpp  InputLayer.hpp  RenderLayer.cpp  RenderLayer.hpp  SceneLayer.cpp  SceneLayer.hpp  WindowLayer.cpp  WindowLayer.hpp
LimeEngine/Source/Platform/: Platform.hpp
LimeEngine/Source/Scene/: CameraComponent.cpp  CameraComponent.hpp  DefaultPlayerCameraComponent.cpp  DefaultPlayerCameraComponent.hpp  MeshComponent.cpp  MeshComponent.hpp  MeshObject.cpp  MeshObject.hpp  Scene.cpp  Scene.hpp  SceneComponent.cpp  SceneComponent.hpp  SceneMap.cpp  SceneObject.cpp  SceneObject.hpp  ScenePrimaryComponent.cpp  ScenePrimaryComponent.hpp  TestMap.cpp  TestMap.hpp
LimeEngine/Source/System/: ApplicationSubsystem.cpp  ApplicationSubsystem.hpp  EngineSubsystem.cpp  EngineSubsystem.hpp  System.cpp  System.hpp  WorldSubsystem.cpp  WorldSubsystem.hpp
LimeEngine/Source/Utility/: ClassUtility.hpp  CompilerDetection.hpp  CompilerTools.hpp  MacroUtility.hpp  Paths.cpp  Paths.hpp  PlatformDetection.hpp  StringUtility.cpp  StringUtility.hpp  Timer.cpp  Timer.hpp
LimeEngine/Source/Window/: Console.cpp  Console.hpp  Window.cpp  Window.hpp
SandBox/: CMakeLists.txt
(+276 files in other folders)
